--- a/templates/about.html
+++ b/templates/about.html
@@ -3,11 +3,11 @@
     <h1>About Page</h1>
 
     <div class = "Instructions">
-        <p> Hello, rock, paper, scissors is a game of luck where you will be playing against another person, and both of you have to make a choice between rock, paper, or scissors at the same time. In this case, you will be playing against the computer. 
+        <p> This project is part of an article that proposes to study the results of the interaction of two players from the perspective of Game Theory and Chaotic Dynamic Systems.
             <br><br>
             <b> Rock beats scissors, scissors beats paper, and paper beats rock.</b>
             <br><br>
-            <p> Please have fun playing with our app! </p>  
+            <p> Have Fun! </p>
         </p>
     </div>
 {% endblock content %}
