--- a/templates/layout.html
+++ b/templates/layout.html
@@ -14,6 +14,7 @@
 
     <!-- SOCKET IO -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+<!--    <script src="{{ url_for('static', filename='socketio.js') }}"></script>-->
 
     {% if title %}
         <title>Rock Paper Scissors - {{ title }}</title>
@@ -37,7 +38,7 @@
               <a class="nav-item nav-link" href="/about">About</a>
               <a class="nav-itme nav-link" href="/leaderboard">Leaderboard</a>
               {% if session['logged_in'] == True %}
-                <a class="nav-item nav-link" href="{{url_for('profile_page', username=session['username'])}}">Profile</a></li>
+                <a class="nav-item nav-link" href="{{url_for('profile_page', username=session['username'])}}">Profile</a>
               {% endif %}
             </div>
             <!-- Navbar Right Side -->
@@ -67,7 +68,6 @@
       {% block content %}{% endblock %}
     </main>
     <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
