--- a/templates/lobby.html
+++ b/templates/lobby.html
@@ -1,83 +1,56 @@
 {% extends "layout.html" %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">
+<!--<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/login.css') }}">-->
 {% block content %}
-    <div class="header">
+    <div class="lobby">
       <h1>Lobby</h1>
+        <div class="col-md-6">
+          <div>Create a new game to play with a friend</div>
+          <div>
+            <form action="{{url_for('create_game_page')}}" method="POST">
+                <input type="submit" class="btn btn-secondary" value="Create Game">
+            </form>
+
+          </div>
+
+        </div>
+
+<!--        <div class="col-md-6">-->
+<!--          <div>Play vs Computer AI MarIA</div>-->
+<!--          <div>-->
+<!--            <button type="submit" id="play_maria_btn" class="btn btn-primary">Play vs MarIA</button>-->
+<!--          </div>-->
+
+<!--        </div>-->
+
+        <div class="col-md-6">
+          <div>Join a friend game</div>
+          <form action="{{url_for('join_game_page')}}" method="POST" id="join-form">
+             <input type="text" name="player_room_id" id="room_id" placeholder="TYPE ROOM ID" form="join-form">
+             <input type="submit" class="btn btn-secondary" value="Join Friend Game" form="join-form">
+          </form>
+
+        </div>
+
+<!--        <div class="col-md-6">-->
+<!--          <div>Play vs online random player</div>-->
+<!--          <div>-->
+<!--            <button type="submit" id="play_random_plyer_btn" class="btn btn-primary">Play vs Random Player</button>-->
+<!--          </div>-->
+
+<!--        </div>-->
+
+      </div>
+
+    <div id="message">
+
     </div>
-    <div class="row">
-
-        <div class="col-md-6">
-          <h2>Create a game</h2>
-          <div>
-            <button type="submit" id="create_room_btn" class="btn btn-primary">Create Game</button>
-          </div>
-
-        </div>
-
-        <div class="col-md-6">
-          <h2>Play vs MarIA</h2>
-          <div>
-            <button type="submit" id="play_maria_btn" class="btn btn-primary">Play vs MarIA</button>
-          </div>
-
-        </div>
-
-        <div class="col-md-6">
-          <h2>Join a friend game</h2>
-          <input type="text" name="roomid" id="room_id" placeholder="TYPE ROOM ID">
-          <button type="submit" id="join_room_btn" class="btn btn-primary">Join Game</button>
-
-        </div>
-
-        <div class="col-md-6">
-          <h2>Play vs online random player</h2>
-          <div>
-            <button type="submit" id="play_random_plyer_btn" class="btn btn-primary">Play vs Random Player</button>
-          </div>
-
-        </div>
-
-      </div>
-      <div class="Leave">
-        <h2>END GAME</h2>
-        <button type="submit" id="leave_room_btn" class="btn btn-primary">Leave</button>
-      </div>
-      <div class="leaderboard">
-        <div class="player1">
-            <h4 class="name1">
-                Player1 :
-            </h4>
-            <span id="player1_score">0</span>
-
-        </div>
-        <div class="player2">
-            <h4 class="name2">
-                Player2:
-            </h4>
-            <span id="player2_score">0</span>
-        </div>
-      </div>
-      <div class="controls">
-        <button type="submit" id="rock" class="btn btn-primary">
-            Rock
-        </button>
-        <button type="submit" id="paper" class="btn btn-info">
-            Paper
-        </button>
-        <button type="submit" id="scissor" class="btn btn-danger">
-            Scissor
-        </button>
-      </div>
-      <div id="message">
-        Waiting for other player's choice...
-      </div>
 
       <!-- Create a variable named username where we take the username from the backend. -->
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
+<!--      <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>-->
 
-      <script type="text/javascript">
-        const username = `{{ username }}`;
-      </script>
+<!--      <script type="text/javascript">-->
+<!--        // const username = `{{ username }}`;-->
+<!--      </script>-->
       
-      <script src="{{ url_for('static', filename='socketio.js') }}"></script>
+<!--      <script src="{{ url_for('static', filename='socketio.js') }}"></script>-->
 {% endblock content %}
