--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,120 +1,89 @@
-/* # is for ids, . is for classes */
+/* Additions for the gameplay page layout */
 
-img {
-  max-width: 100%;
-  max-height: 100%;
+.game {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.my_image {
-  width: 400px;
+.leaderboard {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box
+.player1,
+.player2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
 }
 
-body {
-  background-color: white;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  text-align: center;
-}
-
-/* Using bootstrap navbar header */
-/* .Header {
-  background-color: black;
-  text-align: center;
-  padding: 20px;
-  font-family: Helvetica, sans-serif;
-} */
-header
-{
- height: 110px ; /* Approx */
-}
-
-.Restart-btn {
-  background-color: black;
-  border: none;
-  color: white;
-  padding: 6px 12px;
-  text-align: center;
-  display: inline-block;
-  font-size: 12px;
-}
-
-.Restart-btn:hover {
-  cursor: pointer;
-  box-shadow: 0 0 20px black;
-}
-
-.choice {
+.player1 img,
+.player2 img {
   width: 200px;
   height: 200px;
+  margin-top: 10px;
 }
 
-.Score {
-  margin: 20px auto;
+.controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 20px;
+}
+
+.controls button {
+  margin: 0 10px;
+}
+
+#message,
+#game_room_id {
   text-align: center;
-  border: 2px solid black;
+  margin-bottom: 10px;
+}
+
+.name1,
+.name2 {
+  margin-bottom: 5px;
+  text-align: center;
+}
+
+.leave {
+  margin-top: 20px;
+}
+
+.card {
   width: 200px;
-  font-size: 14pt;
-  padding: 20px;
+  height: 200px;
+  perspective: 1000px;
+  position: relative; /* add this line */
 }
 
-.Result {
-  text-align: center;
-  font-size: 24pt;
-  font-weight: bold;
+.card-back,
+.card-front {
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: transform 1s;
 }
 
-.Choices {
-  margin: 10px;
-  text-align: center;
+.card-back img,
+.card-front img {
+  width: 100%;
+  height: 100%;
 }
 
-.choice {
-  padding: 10px;
-  display: inline-block;
-  transition: all 200ms ease;
+.card-front {
+  position: absolute;
+  top: 50%; /* add this line */
+  left: 50%; /* add this line */
+  transform: translate(-50%, -50%); /* add this line */
 }
 
-.choice:hover {
-  cursor: pointer;
-  background-color: rgb(255, 209, 209);
-  box-shadow: 0 0 35px grey;
-}
-
-.Instructions {
-  display: inline-block;
-  background-color: white;
-  padding: 20px 100px;
-  margin: 20px 100px;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: black;
-}
-
-li {
-  float: left;
-  display: inline;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-/* Change the link color to #111 (black) on hover */
-li a:hover {
-  background-color: #111;
-}
-
+/* End of additions for the gameplay page layout */
