--- a/templates/gameplay.html
+++ b/templates/gameplay.html
@@ -26,12 +26,7 @@
                 <span id="player1_score">0</span>
 
                 <div class="card">
-                  <div class="card-back">
-                    <img src="static/images/logo.png" alt="Card back">
-                  </div>
-                  <div class="card-front">
-                    <img id="player1_choice" src="" alt="Player 1 choice">
-                  </div>
+                    <img id="player1_choice" src="static/images/logo.png" alt="Player 1 choice">
                 </div>
 
             </div>
@@ -44,12 +39,7 @@
                 <span id="player2_score">0</span>
 
                 <div class="card">
-                  <div class="card-back">
-                    <img src="static/images/logo.png" alt="Card back">
-                  </div>
-                  <div class="card-front">
-                    <img id="player2_choice" src="" alt="Player 2 choice">
-                  </div>
+                    <img id="player2_choice" src="static/images/logo.png" alt="Player 2 choice">
                 </div>
 
             </div>
